--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
 
 <body>
     <h1>Hier haben irgendwelche Änderungen stattgefunden.</h1>
+    <a>Das ist eine zweite Änderung</a>
 </body>
 
 </html>
